<resources>
    <string name="app_name">Currency Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>

    <!-- Action buttons -->
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="divide">/</string>
    <string name="clear_button_text">Clear</string>
    <string name="back_button_text">Back</string>

    <string name="hello">Custom Spinner</string>

    <string name="starting_sub_text">From</string>
    <string name="destination_sub_text">To</string>
    <drawable name="darkgrey">#606060</drawable>

    <!-- Currency List -->
    <!-- as strings -->
    <string name="us_dollar">USD</string>
    <string name="euro">EUR</string>
    <string name="gb_pound">GBP</string>
    <string name="canadian_dollar">CAD</string>
    <string name="australian_dollar">AUD</string>
    <string name="japanese_yen">JPY</string>
    <string name="chinese_yuan">CHY</string>
    <string name="swiss_franc">CHF</string>
    <string name="hong_kong_dollar">HKD</string>
    <string name="swedish_krona">SEK</string>
    <string name="new_zealand_dollar">NZD</string>
    <string name="nigerian_dollar">NGN</string>
    <string name="currency_image">Currency Image</string>
    <string name="arithmetic_error">Arithmetic Error!</string>
    <string name="infinity_error">Infinity</string>
    <string name="nan_error">NaN</string>
    <string name="convert_text">Convert</string>
    <string name="top_ten">Top Ten</string>
    <!-- as string array -->
    <string-array name="currency_list">
        <item>@string/us_dollar</item>
        <item>@string/euro</item>
        <item>@string/gb_pound</item>
        <item>@string/canadian_dollar</item>
        <item>@string/australian_dollar</item>
        <item>@string/japanese_yen</item>
        <item>@string/chinese_yuan</item>
        <item>@string/swiss_franc</item>
        <item>@string/hong_kong_dollar</item>
        <item>@string/swedish_krona</item>
        <item>@string/new_zealand_dollar</item>
        <item>@string/nigerian_dollar</item>
    </string-array>
    <string name="title_activity_top_ten">Top Ten</string>
    <string name="internet_test_url">"google.com"</string>
    <string name="no_internet_message">Oops!!! No internet Connection. Connect and try again</string>
    <string name="refresh_button">Refresh</string>
</resources>
