<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_app_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/calculator_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:columnCount="4"
        app:orientation="horizontal"
        app:rowCount="4">

        <Button
            android:id="@+id/clear"
            style="@style/zero_button"
            android:drawableLeft="@drawable/ic_action_highlight_off"
            android:drawableStart="@drawable/ic_action_highlight_off"
            android:text="@string/clear_button_text"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1" />

        <Button
            android:id="@+id/back"
            style="@style/plain_numbers"
            android:drawableLeft="@drawable/ic_action_backspace"
            android:drawableStart="@drawable/ic_action_backspace"
            android:text="@string/back_button_text" />

        <Button
            android:id="@+id/divide"
            style="@style/plain_numbers"
            android:text="@string/divide" />

        <Button
            android:id="@+id/number_7"
            style="@style/plain_numbers"
            android:text="@string/seven" />

        <Button
            android:id="@+id/number_8"
            style="@style/plain_numbers"
            android:text="@string/eight" />

        <Button
            android:id="@+id/number_9"
            style="@style/plain_numbers"
            android:text="@string/nine" />

        <Button
            android:id="@+id/multiply"
            style="@style/action_buttons"
            android:text="@string/multiply" />

        <Button
            android:id="@+id/number_4"
            style="@style/plain_numbers"
            android:text="@string/four" />

        <Button
            android:id="@+id/number_5"
            style="@style/plain_numbers"
            android:text="@string/five" />

        <Button
            android:id="@+id/number_6"
            style="@style/plain_numbers"
            android:text="@string/six" />

        <Button
            android:id="@+id/subtract"
            style="@style/action_buttons"
            android:text="@string/subtract" />

        <Button
            android:id="@+id/number_1"
            style="@style/plain_numbers"
            android:text="@string/one" />

        <Button
            android:id="@+id/number_2"
            style="@style/plain_numbers"
            android:text="@string/two" />

        <Button
            android:id="@+id/number_3"
            style="@style/plain_numbers"
            android:text="@string/three" />

        <Button
            android:id="@+id/add"
            style="@style/action_buttons"
            android:text="@string/add" />

        <Button
            android:id="@+id/number_0"
            style="@style/zero_button"
            android:text="@string/zero"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1" />

        <Button
            android:id="@+id/point"
            style="@style/plain_numbers"
            android:text="@string/point" />

        <Button
            android:id="@+id/equal"
            style="@style/plain_numbers"
            android:text="@string/equal"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </android.support.v7.widget.GridLayout>

</RelativeLayout>
